@@ -71,6 +71,14 @@ class CrudModels(Models, views.DefaultContext):
         Models.__init__(self, request)
         views.DefaultContext.__init__(self, request)
 
+    @property
+    def title(self):
+        area = self.request.model_name
+        name = self.request.model_instance and str(self.request.model_instance).title() or ''
+        view = self.prettify_title(self.request.view_name) or 'view'
+        title = '%s: %s %s' % (area, name, view)
+        return title.title()
+
 
 class ModelView(Base):
     pager_args = dict(link_attr={'class': ''},
