@@ -5,13 +5,14 @@
       tal:define="settings request.registry.settings"
       xmlns:tal="http://xml.zope.org/namespaces/tal">
 <head>
-  <title>Penelope</title>
+  <title>${request.title}</title>
   <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="Content-Type" content="text/html;charset=UTF-8"/>
   <tal:newrelic replace="structure request.newrelic.get_browser_timing_header()" />
   <link metal:define-slot="css"/>
   <script type="text/javascript" metal:define-slot="javascript"></script>
+  <link rel="icon" href="${request.application_url}/favicon.ico" type="image/x-icon"/>
 </head>
 <body>
   <div class="navbar navbar-fixed-top navbar-inverse">
