@@ -2,6 +2,7 @@
 ------------------
 
 - add quick link to reports from tekken [amleczko]
+- add proper HTML title tag [amleczko]
 
 
 2.1.6 (2014-01-13)
